api.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-aust
  labels:
    app: stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
        - image: austinnnnnn/talked:latest
          name: stats
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http-server
      imagePullSecrets:
        - name: regcred
